tests/specs/run/jsx_frag_pragma_null_with_import_source/main.out
error: pragmaFrag cannot be set when runtime is automatic at [WILDLINE]/main.tsx:2:1
