tests/specs/run/jsx_frag_pragma_null_with_import_source/main.tsx
/** @jsxImportSource http://localhost:4545/jsx */
/** @jsxFrag null */
